addition position to fix visibility issue in chrome

--- a/frontend/css/figures.css
+++ b/frontend/css/figures.css
@@ -83,6 +83,7 @@
 	overflow-x: hidden;
 	overflow-y: hidden;
 	float: left;
+	position: relative;
 }
 #figures-list .figure-preview {
 	max-width: 240px;
